ASWeaponProjectile FireLogic migrated to ASWeapon - Projectile replication

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,3 +96,5 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[Audio]
+UnfocusedVolumeMultiplier=1.0
