-weapon all ammo in clip left event -character attached/spawned weapon event -advanced ai moving, six sense, shooting/reloading

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,8 +12,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="CoopGameGameModeBase")
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/ShootRange_TEST.ShootRange_TEST
-GameDefaultMap=/Game/Maps/ShootRange_TEST.ShootRange_TEST
+EditorStartupMap=/Game/Maps/Arena_Base_Small.Arena_Base_Small
+GameDefaultMap=/Game/Maps/Blockout_P.Blockout_P
 GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.PhysicsSettings]
@@ -98,3 +98,4 @@ ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableC
 
 [Audio]
 UnfocusedVolumeMultiplier=1.0
+
